--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
-  }
+},
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node server.js",
+  "dev": "nodemon server.js"
+} 
 }
